; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_vidsoft.c_VIDSoftDeInit.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_vidsoft.c_VIDSoftDeInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dispbuffer = common dso_local global i32* null, align 8
@vdp1framebuffer = common dso_local global i32** null, align 8
@fshader = common dso_local global i64 0, align 8
@gl_shader_prog = common dso_local global i64 0, align 8
@gl_texture_id = common dso_local global i64 0, align 8
@vao = common dso_local global i64 0, align 8
@vbo = common dso_local global i64 0, align 8
@vshader = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @VIDSoftDeInit() #0 {
  %1 = load i32*, i32** @dispbuffer, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32*, i32** @dispbuffer, align 8
  %5 = call i32 @free(i32* %4)
  store i32* null, i32** @dispbuffer, align 8
  br label %6

6:                                                ; preds = %3, %0
  %7 = load i32**, i32*** @vdp1framebuffer, align 8
  %8 = getelementptr inbounds i32*, i32** %7, i64 0
  %9 = load i32*, i32** %8, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %6
  %12 = load i32**, i32*** @vdp1framebuffer, align 8
  %13 = getelementptr inbounds i32*, i32** %12, i64 0
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @free(i32* %14)
  br label %16

16:                                               ; preds = %11, %6
  %17 = load i32**, i32*** @vdp1framebuffer, align 8
  %18 = getelementptr inbounds i32*, i32** %17, i64 1
  %19 = load i32*, i32** %18, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %26

21:                                               ; preds = %16
  %22 = load i32**, i32*** @vdp1framebuffer, align 8
  %23 = getelementptr inbounds i32*, i32** %22, i64 1
  %24 = load i32*, i32** %23, align 8
  %25 = call i32 @free(i32* %24)
  br label %26

26:                                               ; preds = %21, %16
  ret void
}

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
